Update linux_web_installer.md